# cag-analytics

./: BQ_test.py  README.md  bigquery_runner.py  cagliari_weather_graph.py  cagliari_weather_january_2025_20250324175003.html  chatbot.py  hello.py  llm_test.py  llm_ui.py  pyproject.toml
prompts/: data_analyst.md  grammarly.md  system_prompt.md
